Bug 1427968 - Don't check for the force descend flag when checking for the presence of OutOfFlowDisplayData. r=miko